--- a/Layout/layout.html
+++ b/Layout/layout.html
@@ -4,91 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-    #header{
-        height: 13vh;
-        width: 100%;
-        background-color: antiquewhite;
-    }
-
-    #content{
-        width: 100%;
-        
-        height: 100vh;
-        background-color: azure;
-    }
-
-    #footer{
-        height: 10vh;
-        width: 100%;
-        background-color: darkgray;
-
-    }
-
-    nav ul{
-
-        list-style: none;
-        float: right;
-    
-    }
-    nav ul   li{
-        margin: 25px 70px 0px 10px;
-        float: left;
-    }
-
-    nav img{
-
-        width:50px;
-        margin: 5px 0px 0px 10px;
-    }
-
-    nav a{
-      text-decoration: none;   
-      color: black;
-      font-weight: 550; 
-      font-size: 20px;  
-
-    }
-
-    nav a:hover{
-        background-color: tomato;
-        color: #ffffff;
-    }
-
-
-
-   
-
-</style>
-
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: Arial, sans-serif;
+        }
+        #header {
+            height: 60px;
+            background-color: antiquewhite;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 20px;
+        }
+        #header img {
+            width: 50px;
+            height: auto;
+        }
+        nav ul {
+            list-style: none;
+        }
+        nav ul li {
+            display: inline-block;
+            margin-left: 20px;
+        }
+        nav a {
+            text-decoration: none;   
+            color: black;
+            font-weight: bold; 
+            font-size: 16px;  
+            padding: 10px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        nav a:hover {
+            background-color: tomato;
+            color: #ffffff;
+        }
+        #content {
+            min-height: calc(100vh - 70px); /* Adjust for header and footer heights */
+            padding: 20px;
+            background-color: azure;
+        }
+        #footer {
+            height: 50px;
+            background-color: darkgray;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
+        <a href="home.html" target="content">
+            <img src="images/idb-bisew.png" alt="IsDB-BISEW">
+        </a>
         <nav>
-            <a href="home.html" target="content">    
-            <img src="images/idb-bisew.png"  alt="IsDB-BISEW"></a>
-                <ul>
-                    <li><a href="home.html" target="content">Home</a></li>
-                    <li><a href="about.html" target="content">About</a></li>
-                    <li><a href="contact.html" target="content">Contact</a></li>
-                    <li><a href="gallery.html" target="content">Gallery</a></li>
-                </ul>
+            <ul>
+                <li><a href="home.html" target="content">Home</a></li>
+                <li><a href="about.html" target="content">About</a></li>
+                <li><a href="contact.html" target="content">Contact</a></li>
+                <li><a href="gallery.html" target="content">Gallery</a></li>
+            </ul>
         </nav>
     </div>
-
     <div id="content">
         <iframe src="" frameborder="0" name="content" width="100%" height="100%"></iframe>
-
     </div>
-
     <div id="footer">
-
+        <!-- Footer Content Goes Here -->
     </div>
-
 </body>
 </html>
